Complete true hw7.js

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="addElements"><button id="buttonMe">Click</button></div>
-    <script type="module">
-      import { textParagraph } from "./js/hw7.js";
-      textParagraph(document.querySelector("#addElements"));
-    </script>
+    <div class="divshadow">
+      <input class="input" type="text" />
+      <button class="button">Click</button>
+    </div>
+    <script src="./js/hw7.js"></script>
   </body>
 </html>
